test/cli/test-generate/clone-list/cloneSourceResources.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: default
  labels:
    allowedToBeCloned: "true"
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm

---
apiVersion: v1
kind: Secret
metadata:
  name: missing-label
  namespace: default
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
