test/cli/test-generate/clone-list/generatedResource.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: hello-world-namespace
  labels:
    allowedToBeCloned: "true"
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
