test/cli/test-generate/clone-list/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-namespace
  namespace: hello-world-namespace
