test/cli/test-generate/clone-list/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- cloneSourceResource: cloneSourceResources.yaml
  generatedResource: generatedResource.yaml
  kind: Namespace
  policy: clone-list-secrets
  resources:
  - hello-world-namespace
  result: pass
  rule: clone-list-labelled-secrets
